# featherytale

./: .gitignore  README.md
src/: CMakeLists.txt  ConstList.h  GenerateEclipseProject  Simulator.cpp  Simulator.h  analytics.cpp  analytics.h  bootstrap.cpp  constants.h  execute_in_sibling_folder.ini  game_state.cpp  game_state.h  gesturemanager.cpp  gesturemanager.h  gestures.cpp  gestures.h  monetization.cpp  monetization.h  orx_utilities.h  pancarDemo.cpp  pancarDemo.h  pancarObject.cpp  pancarObject.h  persistence.cpp  persistence.h  physicalElements.cpp  physicalElements.h  platform.cpp  platform.h  remote.cpp  remote.h  visualElements.h
src/auxiliary/: generator.h  tuple_operators.h
src/behaviors/: behavior_common.cpp  behavior_common.hpp  infinite_run.cpp  level1-3_behaviors.cpp  level4-6_behaviors.cpp  level_others_behaviors.cpp  sandbox.cpp
src/cmake/: DescribeBuild.cmake  FindORX.cmake  SvgToFrames.cmake  Zopflify.cmake
src/gameObjects/: Button.cpp  Button.h  CountdownTimer.cpp  CountdownTimer.h  Crow.cpp  Crow.h  ForceArrow.cpp  ForceArrow.h  HappinessIndicator.cpp  HappinessIndicator.h  HappinessSidebar.cpp  HappinessSidebar.h  HollowFrame.cpp  HollowFrame.h  PushButton.cpp  PushButton.h  RectangularBody.cpp  RectangularBody.h  Score.cpp  Score.h  SmartText.cpp  SmartText.h  Sparrow.cpp  Sparrow.h  TrailEffect.cpp  TrailEffect.h  Widgets.cpp  Widgets.h  aspects.h  aspects.hpp  observers.cpp
src/orxFSM/: behavior.cpp  behavior.hpp  behavior_combinators.hpp  behavior_context.hpp  behavior_header.hpp  configfunction.cpp  configfunction.h  event_behaviors.hpp  functools.hpp  orxFSM.h  orxFSM_header.h  orx_behaviors.cpp  orx_behaviors.hpp  simple_behaviors.hpp  weakly_pointable.cpp  weakly_pointable.hpp
src/physicalElements/: Bond.h  Cell.cpp  Cell.h  CellIterator.hpp  CellularGrid.cpp  CellularGrid.h  Node.cpp  Node.h  VariousElements.h  VicinityIterator.cpp  VicinityIterator.h  World.cpp  World.h  algorithms.hpp  variousElements.cpp
src/scroll_ext/: ExtendedObject.cpp  ExtendedObject.h  InMemoryTexture.cpp  InMemoryTexture.h  (+3 more)
(+159 files in other folders)
